Revise SEO metadata in index.html
Updated title and meta descriptions for SEO improvements.

--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shreya Edulakanti | Full Stack Web Developer | React & Angular Expert</title>
-    <meta name="description" content="Full Stack Web Developer with 5+ years experience in React, Angular, TypeScript, AWS. Building scalable web applications with 25% faster performance." />
+    <title>Shreya Edulakanti | Full Stack Web Developer</title>
+    <meta name="description" content="Full Stack Web Developer with 5+ years experience in Building scalable web application." />
     <meta name="author" content="Shreya Edulakanti" />
-    <meta name="keywords" content="web developer, full stack developer, react developer, angular developer, typescript, javascript, AWS, frontend developer" />
+    <meta name="keywords" content="web developer, full stack developer, react developer, angular developer, AWS, frontend developer. software engineer, frontend engineer" />
     <link rel="canonical" href="https://yoursite.com/" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yoursite.com/" />
     <meta property="og:title" content="Shreya Edulakanti | Full Stack Web Developer" />
-    <meta property="og:description" content="Full Stack Web Developer with 5+ years experience in React, Angular, TypeScript, AWS. Building scalable web applications." />
+    <meta property="og:description" content="Full Stack Web Developer with around 5 years experience in Building scalable web applications." />
     <meta property="og:image" content="https://yoursite.com/og-image.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://yoursite.com/" />
     <meta name="twitter:title" content="Shreya Edulakanti | Full Stack Web Developer" />
-    <meta name="twitter:description" content="Full Stack Web Developer with 5+ years experience in React, Angular, TypeScript, AWS." />
+    <meta name="twitter:description" content="Full Stack Web Developer with around 5 years experience" />
     <meta name="twitter:image" content="https://yoursite.com/og-image.jpg" />
     
     <!-- Additional SEO -->
